fix: :bug: Fix a small bug with favorites not showing dots

--- a/css/custom.css
+++ b/css/custom.css
@@ -19,7 +19,7 @@
 
 .favorites-search input {
   padding: 10px;
-  width: 20%;
+  width: 22%;
   border: none;
   background-color: var(--sat-bg);
   border-radius: 10px;
